@@ -1,3 +1,4 @@
+* New color scheme for graph
 * Replace img_{width,height} by width and height attributes
 
 Version 3.4.0 - 2014-10-20
